# NierAutomataEx

./: .gitignore  .gitmodules  CMakeLists.txt
include/: config.hh  mod.hh
include/automata/: entities.hh
include/features/: debuggui.hh
include/misc/: console.hh  directx11.hh  globals.hh  gui.hh  helpers.hh  maths.hh  pattern.hh
old/: CMakeLists.txt
old (has SetLevel & glowhack)/: CMakeLists.txt
old (has SetLevel & glowhack)/include/: offsets.hh
old (has SetLevel & glowhack)/source/: main.cc
old/include/: offsets.hh  utilities.hh
old/source/: main.cc  utilities.cc
source/: mod.cc
source/features/: debuggui.cc  entityhacks.cc
source/misc/: console.cc  directx11.cc  entrypoint.cc  gui.cc  maths.cc  pattern.cc
